unpackaged/main/default/objects/Assessment_Checklist_Section__c/Assessment_Checklist_Section__c.object-meta.xml
<CustomObject>
    <label>Assessment Checklist Section</label>
    <nameField>
        <displayFormat>ACS-{0000}</displayFormat>
        <label>Assessment Checklist Section Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Checklist Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>