unpackaged/main/default/objects/Assessment_Checklist_Section__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <label>Assessment</label>
    <referenceTo>Assessments__c</referenceTo>
    <relationshipLabel>Assessment Checklist Section</relationshipLabel>
    <relationshipName>Assessment_Checklist_Section</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>