unpackaged/main/default/objects/Assessment_Checklist_Section__c/fields/Checklist_Section_Comments__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Section_Comments__c</fullName>
    <label>Checklist Section Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>