unpackaged/main/default/objects/Assessment_Checklist_Section__c/fields/Checklist_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Section_Name__c</fullName>
    <label>Checklist Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>