unpackaged/main/default/objects/Assessment_Checklist_Section__c/fields/Checklist_Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Section_Order__c</fullName>
    <label>Checklist Section Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>